--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/6/n11704130.md#1">¡¾Ê®×ÖÂ·¿Ú¡¿·¿Æó¼¯ÌåÆÆ²ú ÖÐ¹úÕ®Îñ·ç±©À´Ï®</a><br>
 <br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/nf6092.md#1">¸ü¶à......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/13/n11719738.md#1">¡¾·­Ç½±Ø¿´¡¿·ÖÎö£º°ÚÔÚÏ°ÃæÇ°µÄÈýÌõÂ·</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11719273.md#1">ÍâÃ½£ºÖÐ¹ú·¿µØ²úÊÐ³¡µ÷¿Ø½øÈëÃô¸ÐÆÚ</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11719474.md#1">¡¾ÃÀ¹úË¼ÏëÁìÐä ¡¿°àÅ©×¨·Ã ÊÓÆµ×ÖÄ»°æ£¨ÉÏ£©</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11719243.md#1">¡¾ÈÈµã»¥¶¯¡¿µçÄÔÉè±¸ÓÃ¹ú»õ ÖÐ¹²ÓûÓëÎ÷·½ÍÑ¹³</a><br>
@@ -41,7 +42,8 @@
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11719224.md#1">ÐÇµºÔÙÂ¶ºìÃ½µ×ÅÆ ºÎÖù¹ú±Æ¹¬ÁÖÖ£ÄÚÇé</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11719012.md#1">¡¾ÐÂÎÅ¿´µã¡¿ÁÖÖ£½ÓÁ¬±»´òÁ³ ±±¾©¸ÃÏëÏëÁË</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718735.md#1">¡¾ÐÂÎÅ¿´µã¡¿¹ØË°´óÏÞ½üÏûÏ¢ÂúÌì·É ´¨ÆÕÔÙº°»°</a><br>
-<a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718861.md#1">Ï°·Ã°ÄÃÅ´òÔì½ðÈÚÖÐÐÄ£¿×¨¼Ò£ºÏã¸ÛÎÞ¿ÉÌæ´ú</a><br>
+<a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714551.md#1">ÅÌµã2020Äê×î´óµÄÖÐ¹ú¡°»ÒÏ¬Å£¡±</a><br>
+<a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/13/n11719713.md#1">Ïã¸Û4.3ÍòÈË³öÏ¯6.12°ëÖÜÄê¼¯»á</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/13/n11719653.md#1">¹ãÖÝÒ»ÖÐÑ§±¬·¢¼×ÐÍÁ÷¸Ð 114Ñ§ÉúÈ¾²¡</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11719438.md#1">·´ËÍÖÐ°ëÄê ÖÐ»·³¬4ÍòÈË¼¯»á¡°ÆëÉÏÆëÂä¡±</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11719420.md#1">Ô­¸±×Ü¾­Àí¶Å¹âÒå±»²é Ã©Ì¨½ñÄêÊ®¸ß¹ÜÂäÂí</a><br>
@@ -49,6 +51,7 @@
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718879.md#1">ÔìÐÍÄ£·Â»¨Ç§¹Ç Ð»ÄÈº°»°ÕÔÀöÓ±£ºÐø¼¯ÎÒ½ÓÑÝ</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718922.md#1">¡¾¿ìÑ¶¡¿Ó¢¹ú´óÑ¡ ³ö¿ÚÃñµ÷ÏÔ±£ÊØµ³´óÊ¤</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718227.md#1">5Ç§ÖÐ¹²¹ÙÔ±·Ç·¨À´Ì¨ »ù½ø£ºÊµ¼Ê¿Ö³¬Êý±¶</a><br>
+<a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718861.md#1">Ï°·Ã°ÄÃÅ´òÔì½ðÈÚÖÐÐÄ£¿×¨¼Ò£ºÏã¸ÛÎÞ¿ÉÌæ´ú</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11719114.md#1">ÄÚÍâ½»À§Ö®¼Ê ÖÐ¹²Í»È»½úÉý½ü°ÙÃû½«¾ü</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717070.md#1">¡¶¹éÍ¾¡·ÈëÎ§¶à¹úµçÓ°½Ú ¸÷´óÖÞ×¨ÒµÈËÊ¿ÔÞÉÍ</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11718893.md#1">´«ÃÀ½«È¡Ïû12ÔÂ¹ØË° Ð­ÒéÖ´ÐÐ»úÖÆ¸¡³öË®Ãæ</a><br>
@@ -85,11 +88,8 @@
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716940.md#1">Ì¨ºº¹â±øÍÆ¾üÑÝ ÃÀ¹úÓ¡Ì«ÁªÂç¹Ù½«Ê×´Î½ø×¤</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717304.md#1">ÄÚÃÉ¹Å¶õ¶û¶àË¹¹«°²¾Ö¸ß¹ÙÁõ½ÜÂäÂí</a><br>
 <a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717158.md#1">¡¾ÅÄ°¸¾ªÆæ¡¿Ãæ¶ÔÇ¿È¨ ¸ÛÈË»¹ÓÐÁ½Ñù¡°ÎäÆ÷¡±</a><br>
-<a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717219.md#1">É½¶«90ºóÄÐ×Ó¾ÈÇáÉúÅ®Ë«Ë«ÓöÄÑ</a><br>
-<a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717179.md#1">ÖÐ¹ú¹º58.5Íò¶ÖÃÀ¹ú´ó¶¹ 4ÔÂ·ÝÀ´×î´ó×Ú</a><br>
-<a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717105.md#1">´óÂ½×îÐÂ·ÇÖÞÖíÎÁÒßÇé ÉÂÎ÷ÓÐÒ°ÖíËÀÍö</a><br>
 <br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413_2.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/gudianwu.jpg" title="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ" alt="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ">ÉñÔÏ¹ÅµäÎè±íÑÝ</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/9ping.jpg" title="¾ÅÆÀ¹²²úµ³" alt="¾ÅÆÀ¹²²úµ³">¾ÅÆÀ¹²²úµ³</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/communism.jpg" title="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ" alt="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ">¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/1107.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/weihuo.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"" alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"">ÖÐ¹²µÄÎ±»ðÆ­¾Ö"</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/1106.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/1400l.jpg" title="ÆÊÎö1400Àý" alt="ÆÊÎö1400Àý">ÆÊÎö1400Àý</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/tianan.jpg" title="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì" alt="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì">Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/weilai.jpg" title="Î´À´ÈËµÄÉñ»°" alt="Î´À´ÈËµÄÉñ»°">Î´À´ÈËµÄÉñ»°¹ÊÊÂ</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/changzhi.jpg" title="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯" alt="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯">¹Å½ñÆæ¹Û-²Ø×ÖÊ¯</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/144.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/ji-zy.jpg" title="ÖÐ¹²×ï¶ñµÄ»îÕª" alt="ÖÐ¹²×ï¶ñµÄ»îÕª">ÖÐ¹²×ï¶ñµÄ»îÕª</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/huozhai.jpg" title="ÌúÖ¤ÈçÉ½" alt="ÌúÖ¤ÈçÉ½">ÌúÖ¤ÈçÉ½</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/4ke.jpg" title="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ" alt="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ">Ò»¼ÒËÄ¿ÚËÀÓÚ±©Õþ</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/jie-di.jpg" title="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦" alt="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦">µÜÃÃÏà¼ÌËÀÓÚÆÈº¦</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/ma-sj.jpg" title="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ" alt="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ">ËýÃÇ±»ÖÐ¹²ÆÈº¦ËÀ</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/shuan-cxl.jpg" title="Ë«³ÇÑªÀá" alt="Ë«³ÇÑªÀá">Ë«³ÇÑªÀá</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/wu-zbh.jpg" title="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤" alt="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤">ÎÞ×ï±ç»¤Õðº³ÈËÐÄ</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/6c10-720.jpg" title="´Ó610µ½720" alt="´Ó610µ½720">´Ó610µ½720</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/xian-z.jpg" title="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ" alt="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ">ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/425.jpg" title="ÍòÈËÉÏ·ÃÕæÏà" alt="ÍòÈËÉÏ·ÃÕæÏà">ÍòÈËÉÏ·ÃÕæÏà</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/qing-h.jpg" title="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó" alt="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó">±»ÆÈº¦µÄÇå»ªÑ§×Ó</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/jian-z513.jpg" title="¼ûÖ¤513" alt="¼ûÖ¤513">¼ûÖ¤513</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/gongfu.jpg" title="¹¦·ò Ñ°µÀ" alt="¹¦·ò Ñ°µÀ">¹¦·ò Ñ°µÀ</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/guangguimian.jpg" title="¸è³ª¼ÒÈËÉúÆæ¼£" alt="¸è³ª¼ÒÈËÉúÆæ¼£">¸è³ª¼ÒµÄÈËÉúÆæ¼£</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/165.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/ming-jjy.jpg" title="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ" alt="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ">ÃûÐ£¾«Ó¢µÄÑ¡Ôñ</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/yin-lj.jpg" title="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ" alt="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ">ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ</a><br><a href="https://d1sgcvlfinc0zf.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/ming-hsf.jpg" title="Æ½·²ÖÐµÄ²»Æ½·²" alt="Æ½·²ÖÐµÄ²»Æ½·²">Æ½·²ÖÐµÄ²»Æ½·²</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/130/nizhibeituolanlao.jpg" title="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ">ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/130/huozhai1.jpg" title="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"  alt="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª">¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/130/motoumks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·">Âí¿ËË¼µÄ³ÉÄ§Ö®Â·</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/130/konggaojm.jpg" title="303ÍòÈËµÄ¾Ù±¨"  alt="303ÍòÈËµÄ¾Ù±¨">303ÍòÈËµÄ¾Ù±¨</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/130/lianganduibi.jpg" title="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"  alt="º£Ï¿Á½°¶Ç¿ÁÒ·´²î">º£Ï¿Á½°¶Ç¿ÁÒ·´²î</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/130/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½">Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fxikhp286/www/master/t/130/xuejiao.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°">²»Ò»ÑùµÄº£ÍâÐ£Ô°</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>ÖÐ¹úÈËÈ¨</strong></p></h2><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716553.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/Unknown-2-150x120.jpg"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716553.md#1">ºÚ¾¯¾âÃÅÏà±Æ ·¨ÂÖ¹¦Ñ§Ô±ÀîÑÞ½Ü±»ÆÈÌøÂ¥ÌÓÉúÓöÄÑ</a><br>¾âÃÅÉùÔ½À´Ô½´ó£¬Â¥µÀÀïàÐÔÓÉùÔ½À´Ô½ ...<br><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11716997.md#1">ÀîÎÄ×ã»ñ·¨µÂÈËÈ¨·¨ÖÎ½± ¹ú±£Óû×èÁì½±²»¹û</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714077.md#1">¸ÊËàÊ¡Ç°610Ö÷ÈÎÅÓ²¨±»¾Ù±¨µ½º£Íâ</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716403.md#1">ÃÀ¹ÙÔ±£º¸ÐÅå·¨ÂÖ¹¦Ñ§Ô±Ö±ÃæÖÐ¹²Ð°¶ñµÄÓÂÆø</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716284.md#1">ÐÂÎÅ×ÔÓÉ¶ñ»¯ ÖÐ¹²½ñÄê¼à½û¼ÇÕßÊýÈ«ÇòµÚÒ»</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716131.md#1">»ª¸®ÈËÈ¨ÈÕÑÐÌÖ»á ¹ú»áÒéÔ±ÉùÔ®3.47ÒÚÈËÍËµ³</a><br><br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid278.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÖÐ¹ú¾­¼Ã</strong></p></h2><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717108.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/Capitol_Building-150x120.jpg"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717108.md#1">ÖÐ¹²ÍþÐ²±¨¸´ÃÀ¿Æ¼¼¹«Ë¾ ÃÀÒéÔ±ÃÇÇ¿Ó²»ØÓ¦</a><br>ÖÐ¹²ÒªÇóËùÓÐÕþ¸®ºÍ¹«¹²ÊÂÒµ»ú¹ØÔÚÈý ...<br><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717047.md#1">ÍâÃ½£ºÖÐ¹ú¾³ÄÚÕ®ÎñÎ¥Ô¼·çÏÕ ÂûÑÓÖÁº£Íâ</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716813.md#1">ÍâÃ½£ºÈ±ÉÙÎüÒýÁ¦ ÈËÃñ±Ò¹ú¼Ê»¯ÏÝÈëÍ£ÖÍ</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716496.md#1">Ò»ÆûÏÄÀûÍË³öÊÐ³¡  ÖÐ¹ú×ÔÖ÷Æ·ÅÆÔÙÕÛêª</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716196.md#1">½ñÄêÓâ°ËÍòÖÐ¹ú·¿ÆóÍ£Òµ ±ÈÈ¥ÄêÔö½ü40%</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716268.md#1">È·±£Ï¡ÍÁ¹©Ó¦ ÃÀ¾ü²ÉÈ¡×Ô¶þÕ½ÒÔÀ´½ô¼±ÐÐ¶¯</a><br><br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid283.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>´óÂ½ÕþÖÎ</strong></p></h2><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712401.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2014/10/140930134106985-150x120.jpg"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712401.md#1">ÃÀÖÐ¹ú×¨¼Ò³öÊé ½ÒÖÐ¹²³¬¼¶¼äµýÔâÅ×Æú£¨ÏÂ£©</a><br>×î½üÖÐ¹²ÌØ¹¤ÍõÁ¢Ç¿Í¶³Ï°ÄÖÞ£¬Òý·¢Íâ ...<br><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11716957.md#1">ÕÅÏþÃ÷ÔÙÌá23Ìõ ¸Û¿¹ÒéÕß£º½«ÖÂÖÐ¹²¸²Ãð</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11711264.md#1">ÖÐ¹²Ì¬¶È·´¸´ ÈÎÕý·Ç¼Ò×åÐÎÏó¿ìËÙ±ÀÀ£</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/4/n11701016.md#1">ÃÀÎªºÎµãÃûÒªÖÆ²Ã¡¶´ó¹«±¨¡·¡¶ÎÄ»ã±¨¡·</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716717.md#1">¸ßÒÔÏè´ú±í×÷²åÇúÖ÷³ª´ÇÊÀ ·¶çâç÷·¢ÎÄµ¿Äî</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716783.md#1">¡¶½ûÃÉÃæ·¨¡·Ê§Ð§ Áº¼Ò½Ü£º±±¾©Ã»ÓÐÑ¡ÔñÓàµØ</a><br><br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid277.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÌìÔÖÈË»ö</strong></p></h2><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716656.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2008/06/806120829481093-150x120.jpg"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716656.md#1">ÒßÇéÀ©´ó ¹þ¶û±õÔÙÓÐ13ÃûÑ§Éú¸ÐÈ¾²¼²¡</a><br>ÖÐ¹úÅ©¿ÆÔºÀ¼ÖÝÊÞÒ½ÑÐ¾¿Ëù11ÔÂÏÂÑ®±¬ ...<br><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717137.md#1">ÁÉÄþ¸§Ë³Ê¯ÓÍ¶þ³§Í»·¢´ó»ð »ð¹â³åÌì</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11715631.md#1">ÄÚÃÉ¹ÅÍ¨ÁÉÊÐ¸ßËÙÂ·ÉÏ´ó¿Í³µ²à·­ ÖÂ53ÉË</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714843.md#1">ºÓÄÏÒ»´åÃñÓÃÈýÂÖÄ¦ÍÐÔØ6ÈË×¹ÑÂ 6ËÀ1ÉË</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714742.md#1">ÌÆÉ½µØÕðºó±±¾©²ýÆ½ÓÖµØÕð ÍøÃñ£º½ñÄê·´³£</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712523.md#1">°²»ÕÁù°²¸ßËÙÂ·½ÓÁ¬·¢Éú³µ»ö ¹²ÖÂ6ËÀ10ÉË</a><br><br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid280.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>Éç»áÍòÏó</strong></p></h2><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714587.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/10/VCG31N1183921600-150x120.jpg"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714587.md#1">ÕÂ×Óâù²úÇ°×ÔÆØ×îÐÂÌåÖØ ÍøÓÑÇó±£³ÖÉí²ÄÃØóÅ</a><br>40ËêµÄ´óÂ½Å®ÐÇÕÂ×Óâù£¬11ÈÕÔÚÎ¢²©É¹ ...<br><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716774.md#1">³õÑ§¸ñ¶·±»°²ÅÅÓë¹Ú¾ü¶Ô´ò ´óÑ§Éú±»ÌßÃüÎ£</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716629.md#1">½û×Ô´ø¹Ç»ÒºÐ ºþÄÏéëÒÇ¹Ý×ÔÂôÓâÍòÔªÒ»¸ö</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716409.md#1">¹óÖÝÆ¶À§ÏØ¾ÙÕ®22ÒÚÔª ÔìÉ½Õ¯¡°×Ï½û³Ç¡±</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11715794.md#1">Ì¨ÂÃÐÐÉç¹´½áÈËÍ·Ð­»á 5Ç§Â½¹«ÎñÔ±·Ç·¨À´Ì¨</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714758.md#1">¼ÓÄÃ´ó¹ú»áÌØ±ðÎ¯Ô±»á³ÉÁ¢ Éó²é¼ÓÖÐ¹ØÏµ</a><br><br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>¿Æ½ÌÎÄ»¯</strong></p></h2><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716545.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/11/3ddd672404742c6f32850f92cd1b1c75-150x120.jpg"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716545.md#1">µÏÊ¿ÄáµçÓ°ÄêÆ±·¿ÆÆ100ÒÚÃÀÔª ´´Ó°Ê·¼ÍÂ¼</a><br>¼Ìµ±µØÊ±¼ä12ÔÂ8ÈÕµÏÊ¿ÄáÐû²¼ÆìÏÂµçÓ ...<br><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11715454.md#1">Ê¦µÂÉ¥¾¡ ±±´ó½ÌÊÚÓë¶àÈËÓÐ²»Õýµ±¹ØÏµ</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712329.md#1">¡¶¼Ù¿××ÓÖ®Ãû¡·Ä½ÄáºÚ·ÅÓ³ ½ÒÂ¶ÖÐ¹²ÉøÍ¸</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712101.md#1">»ªÈË¼Ò³¤£º¿××ÓÑ§ÔºÅàÑøÖÐµÂ»ìÑª¶ù ÒâÔÚÉøÍ¸</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11710758.md#1">ÖÐ¹ú¿ÆÑ§¼Ò´´Öíºï»ìÖÖ¶¯Îï ¹ú¼Ê¿ÆÑ§¼ÒÇ´Ôð</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/6/n11706340.md#1">ÖÐ¹²³ÍÖÎË«ÖØ¹ú¼®£¿ÀîÁ¬½ÜµÈÃ÷ÐÇ±»Íø¾¯µãÃû</a><br><br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid281.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>ÍøÎÅ½ûÎÅ</strong></p></h2><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/7/n11707663.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_586447673-600x400-150x120.jpg"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/7/n11707663.md#1">ÃÀÍ¼Æ¬ÉÌÅäºÏÖÐ¹²½¨ºÚÃûµ¥ Ô±¹¤ÇëÔ¸º°Í£</a><br>ÃÀ¹úÔÚÏßÐÂÎÅÍøÕ¾¡°The Intercept¡±Ö ...<br><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/5/n11703901.md#1">»ªÎªÊ§ÃñÐÄ ÃÏÍíÖÛ¼¦ÌÀÐÅ°Ü¸øÀîºéÔª251</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/3/n11697873.md#1">¸ÛÈËÉí·Ý±äÃô¸Ð£¿½»ÒøÏã¸ÛÊ×Ï¯¾­¼ÃÊ¦±»³´</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/3/n11698082.md#1">¸üÑÏÖÆ²Ã ´«°×¹¬Äâ½«»ªÎªÌÞ³öÃÀÒøÐÐÌåÏµ</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/2/n11696142.md#1">ÖÐ¹²ÖÆ²ÃÃÀÈËÈ¨×éÖ¯ ±»Ö¸¡°À×Éù´óÓêµãÐ¡¡±</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/2/n11696073.md#1">ÃÀ²ÎÒéÔ±»ØÓ¦ÖÐ¹²±¨¸´ Ö¸±±¾©·¢Æ¢ÆøÃ»ÓÃ</a><br><br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid2420.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÈºÌåÊÂ¼þ</strong></p></h2><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714651.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/S__13934610-150x120.jpg"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714651.md#1">¹ú¼ÊÈËÈ¨ÈÕ ¶àÎ»´óÂ½Î¬È¨ÈËÊ¿±»¿ØÖÆ²»ÄÜÍâ³ö</a><br>12ÔÂ10ÈÕ¹ú¼ÊÈËÈ¨ÈÕ£¬ÖÐ¹ú¶àÃûÎ¬È¨ÈË ...<br><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11713727.md#1">²Î¼ÓÈËÈ¨ÈÕ»î¶¯ ÃÀ×¤»ª´óÊ¹¹ÝÇ°ÊýÊ®ÈË±»×¥</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11713745.md#1">²ØÉí¼Ò¾ß´ÓÄ«Î÷¸çÍµ¶ÉÃÀ¹ú 11ÖÐ¹úÈË±»¾Ð</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/7/n11707400.md#1">ÒßÃçÊÜº¦¶ùÍ¯µ½±±¾©ÎÀ½¡Î¯Î¬È¨ ÓÐ¼Ò³¤±»¾Ð</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/5/n11701647.md#1">·¨ÖÆÈÕ¸÷µØÃñÖÚÎ¬È¨ ¹úÐÅ¾Ö·ÃÃñÈËÍ·Ó¿Ó¿</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/3/n11698433.md#1">ÖÐ¹²¾å¿¹ÕùÂûÑÓÈ«¹ú Ã¯Ãû¡°Ê±´ú¸ïÃü¡±³É¹¦</a><br><br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid279.md#1">¸ü¶à......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>ÖÐ¹úÈËÈ¨</strong></p></h2><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716553.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/Unknown-2-150x120.jpg"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716553.md#1">ºÚ¾¯¾âÃÅÏà±Æ ·¨ÂÖ¹¦Ñ§Ô±ÀîÑÞ½Ü±»ÆÈÌøÂ¥ÌÓÉúÓöÄÑ</a><br>¾âÃÅÉùÔ½À´Ô½´ó£¬Â¥µÀÀïàÐÔÓÉùÔ½À´Ô½ ...<br><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11716997.md#1">ÀîÎÄ×ã»ñ·¨µÂÈËÈ¨·¨ÖÎ½± ¹ú±£Óû×èÁì½±²»¹û</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714077.md#1">¸ÊËàÊ¡Ç°610Ö÷ÈÎÅÓ²¨±»¾Ù±¨µ½º£Íâ</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716403.md#1">ÃÀ¹ÙÔ±£º¸ÐÅå·¨ÂÖ¹¦Ñ§Ô±Ö±ÃæÖÐ¹²Ð°¶ñµÄÓÂÆø</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716284.md#1">ÐÂÎÅ×ÔÓÉ¶ñ»¯ ÖÐ¹²½ñÄê¼à½û¼ÇÕßÊýÈ«ÇòµÚÒ»</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716131.md#1">»ª¸®ÈËÈ¨ÈÕÑÐÌÖ»á ¹ú»áÒéÔ±ÉùÔ®3.47ÒÚÈËÍËµ³</a><br><br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid278.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÖÐ¹ú¾­¼Ã</strong></p></h2><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717179.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2018/12/0bd17c9aff9da98bbdf47db52c67652c-150x120.jpg"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717179.md#1">ÖÐ¹ú¹º58.5Íò¶ÖÃÀ¹ú´ó¶¹ 4ÔÂ·ÝÀ´×î´ó×Ú</a><br>ÃÀ¹úÅ©Òµ²¿12ÔÂ11ÈÕ¹«²¼£¬ÖÐ¹úÂò¼Ò¶© ...<br><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717108.md#1">ÖÐ¹²ÍþÐ²±¨¸´ÃÀ¿Æ¼¼¹«Ë¾ ÃÀÒéÔ±ÃÇÇ¿Ó²»ØÓ¦</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717047.md#1">ÍâÃ½£ºÖÐ¹ú¾³ÄÚÕ®ÎñÎ¥Ô¼·çÏÕ ÂûÑÓÖÁº£Íâ</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716813.md#1">ÍâÃ½£ºÈ±ÉÙÎüÒýÁ¦ ÈËÃñ±Ò¹ú¼Ê»¯ÏÝÈëÍ£ÖÍ</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716496.md#1">Ò»ÆûÏÄÀûÍË³öÊÐ³¡  ÖÐ¹ú×ÔÖ÷Æ·ÅÆÔÙÕÛêª</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716196.md#1">½ñÄêÓâ°ËÍòÖÐ¹ú·¿ÆóÍ£Òµ ±ÈÈ¥ÄêÔö½ü40%</a><br><br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid283.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>´óÂ½ÕþÖÎ</strong></p></h2><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712401.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2014/10/140930134106985-150x120.jpg"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712401.md#1">ÃÀÖÐ¹ú×¨¼Ò³öÊé ½ÒÖÐ¹²³¬¼¶¼äµýÔâÅ×Æú£¨ÏÂ£©</a><br>×î½üÖÐ¹²ÌØ¹¤ÍõÁ¢Ç¿Í¶³Ï°ÄÖÞ£¬Òý·¢Íâ ...<br><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11716957.md#1">ÕÅÏþÃ÷ÔÙÌá23Ìõ ¸Û¿¹ÒéÕß£º½«ÖÂÖÐ¹²¸²Ãð</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11711264.md#1">ÖÐ¹²Ì¬¶È·´¸´ ÈÎÕý·Ç¼Ò×åÐÎÏó¿ìËÙ±ÀÀ£</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/4/n11701016.md#1">ÃÀÎªºÎµãÃûÒªÖÆ²Ã¡¶´ó¹«±¨¡·¡¶ÎÄ»ã±¨¡·</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716717.md#1">¸ßÒÔÏè´ú±í×÷²åÇúÖ÷³ª´ÇÊÀ ·¶çâç÷·¢ÎÄµ¿Äî</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716783.md#1">¡¶½ûÃÉÃæ·¨¡·Ê§Ð§ Áº¼Ò½Ü£º±±¾©Ã»ÓÐÑ¡ÔñÓàµØ</a><br><br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid277.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÌìÔÖÈË»ö</strong></p></h2><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717105.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-697069006-1-600x400-150x120.jpg"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717105.md#1">´óÂ½×îÐÂ·ÇÖÞÖíÎÁÒßÇé ÉÂÎ÷ÓÐÒ°ÖíËÀÍö</a><br>·ÇÖÞÖíÎÁÒßÇéÔÚ´óÂ½³ÖÐøÂûÑÓ£¬ÖØ´´Ñø ...<br><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717219.md#1">É½¶«90ºóÄÐ×Ó¾ÈÇáÉúÅ®Ë«Ë«ÓöÄÑ</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717137.md#1">ÁÉÄþ¸§Ë³Ê¯ÓÍ¶þ³§Í»·¢´ó»ð »ð¹â³åÌì</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716656.md#1">ÒßÇéÀ©´ó ¹þ¶û±õÔÙÓÐ13ÃûÑ§Éú¸ÐÈ¾²¼²¡</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11715631.md#1">ÄÚÃÉ¹ÅÍ¨ÁÉÊÐ¸ßËÙÂ·ÉÏ´ó¿Í³µ²à·­ ÖÂ53ÉË</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714843.md#1">ºÓÄÏÒ»´åÃñÓÃÈýÂÖÄ¦ÍÐÔØ6ÈË×¹ÑÂ 6ËÀ1ÉË</a><br><br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid280.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>Éç»áÍòÏó</strong></p></h2><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714587.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/10/VCG31N1183921600-150x120.jpg"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714587.md#1">ÕÂ×Óâù²úÇ°×ÔÆØ×îÐÂÌåÖØ ÍøÓÑÇó±£³ÖÉí²ÄÃØóÅ</a><br>40ËêµÄ´óÂ½Å®ÐÇÕÂ×Óâù£¬11ÈÕÔÚÎ¢²©É¹ ...<br><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716774.md#1">³õÑ§¸ñ¶·±»°²ÅÅÓë¹Ú¾ü¶Ô´ò ´óÑ§Éú±»ÌßÃüÎ£</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716629.md#1">½û×Ô´ø¹Ç»ÒºÐ ºþÄÏéëÒÇ¹Ý×ÔÂôÓâÍòÔªÒ»¸ö</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716409.md#1">¹óÖÝÆ¶À§ÏØ¾ÙÕ®22ÒÚÔª ÔìÉ½Õ¯¡°×Ï½û³Ç¡±</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11715794.md#1">Ì¨ÂÃÐÐÉç¹´½áÈËÍ·Ð­»á 5Ç§Â½¹«ÎñÔ±·Ç·¨À´Ì¨</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714758.md#1">¼ÓÄÃ´ó¹ú»áÌØ±ðÎ¯Ô±»á³ÉÁ¢ Éó²é¼ÓÖÐ¹ØÏµ</a><br><br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>¿Æ½ÌÎÄ»¯</strong></p></h2><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716545.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/11/3ddd672404742c6f32850f92cd1b1c75-150x120.jpg"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716545.md#1">µÏÊ¿ÄáµçÓ°ÄêÆ±·¿ÆÆ100ÒÚÃÀÔª ´´Ó°Ê·¼ÍÂ¼</a><br>¼Ìµ±µØÊ±¼ä12ÔÂ8ÈÕµÏÊ¿ÄáÐû²¼ÆìÏÂµçÓ ...<br><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11715454.md#1">Ê¦µÂÉ¥¾¡ ±±´ó½ÌÊÚÓë¶àÈËÓÐ²»Õýµ±¹ØÏµ</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712329.md#1">¡¶¼Ù¿××ÓÖ®Ãû¡·Ä½ÄáºÚ·ÅÓ³ ½ÒÂ¶ÖÐ¹²ÉøÍ¸</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712101.md#1">»ªÈË¼Ò³¤£º¿××ÓÑ§ÔºÅàÑøÖÐµÂ»ìÑª¶ù ÒâÔÚÉøÍ¸</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11710758.md#1">ÖÐ¹ú¿ÆÑ§¼Ò´´Öíºï»ìÖÖ¶¯Îï ¹ú¼Ê¿ÆÑ§¼ÒÇ´Ôð</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/6/n11706340.md#1">ÖÐ¹²³ÍÖÎË«ÖØ¹ú¼®£¿ÀîÁ¬½ÜµÈÃ÷ÐÇ±»Íø¾¯µãÃû</a><br><br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid281.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>ÍøÎÅ½ûÎÅ</strong></p></h2><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/7/n11707663.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_586447673-600x400-150x120.jpg"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/7/n11707663.md#1">ÃÀÍ¼Æ¬ÉÌÅäºÏÖÐ¹²½¨ºÚÃûµ¥ Ô±¹¤ÇëÔ¸º°Í£</a><br>ÃÀ¹úÔÚÏßÐÂÎÅÍøÕ¾¡°The Intercept¡±Ö ...<br><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/5/n11703901.md#1">»ªÎªÊ§ÃñÐÄ ÃÏÍíÖÛ¼¦ÌÀÐÅ°Ü¸øÀîºéÔª251</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/3/n11697873.md#1">¸ÛÈËÉí·Ý±äÃô¸Ð£¿½»ÒøÏã¸ÛÊ×Ï¯¾­¼ÃÊ¦±»³´</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/3/n11698082.md#1">¸üÑÏÖÆ²Ã ´«°×¹¬Äâ½«»ªÎªÌÞ³öÃÀÒøÐÐÌåÏµ</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/2/n11696142.md#1">ÖÐ¹²ÖÆ²ÃÃÀÈËÈ¨×éÖ¯ ±»Ö¸¡°À×Éù´óÓêµãÐ¡¡±</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/2/n11696073.md#1">ÃÀ²ÎÒéÔ±»ØÓ¦ÖÐ¹²±¨¸´ Ö¸±±¾©·¢Æ¢ÆøÃ»ÓÃ</a><br><br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid2420.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÈºÌåÊÂ¼þ</strong></p></h2><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714651.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/S__13934610-150x120.jpg"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11714651.md#1">¹ú¼ÊÈËÈ¨ÈÕ ¶àÎ»´óÂ½Î¬È¨ÈËÊ¿±»¿ØÖÆ²»ÄÜÍâ³ö</a><br>12ÔÂ10ÈÕ¹ú¼ÊÈËÈ¨ÈÕ£¬ÖÐ¹ú¶àÃûÎ¬È¨ÈË ...<br><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11713727.md#1">²Î¼ÓÈËÈ¨ÈÕ»î¶¯ ÃÀ×¤»ª´óÊ¹¹ÝÇ°ÊýÊ®ÈË±»×¥</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11713745.md#1">²ØÉí¼Ò¾ß´ÓÄ«Î÷¸çÍµ¶ÉÃÀ¹ú 11ÖÐ¹úÈË±»¾Ð</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/7/n11707400.md#1">ÒßÃçÊÜº¦¶ùÍ¯µ½±±¾©ÎÀ½¡Î¯Î¬È¨ ÓÐ¼Ò³¤±»¾Ð</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/5/n11701647.md#1">·¨ÖÆÈÕ¸÷µØÃñÖÚÎ¬È¨ ¹úÐÅ¾Ö·ÃÃñÈËÍ·Ó¿Ó¿</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/3/n11698433.md#1">ÖÐ¹²¾å¿¹ÕùÂûÑÓÈ«¹ú Ã¯Ãû¡°Ê±´ú¸ïÃü¡±³É¹¦</a><br><br><p><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid279.md#1">¸ü¶à......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>¾ÅÆÀ¹²²úµ³</strong></p></h2><a href="https://github.com/fxikhp286/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">¡¾Ò»¡¿ÆÀ¹²²úµ³ÊÇÊ²Ã´</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">¡¾¶þ¡¿ÆÀÖÐ¹ú¹²²úµ³ÊÇÔõÑùÆð¼ÒµÄ</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">¡¾Èý¡¿ÆÀÖÐ¹ú¹²²úµ³µÄ±©Õþ</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">¡¾ËÄ¡¿ÆÀ¹²²úµ³ÊÇ·´ÓîÖæµÄÁ¦Á¿</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">¡¾Îå¡¿ÆÀ½­ÔóÃñÓëÖÐ¹²Ïà»¥ÀûÓÃÆÈº¦·¨ÂÖ¹¦</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">¡¾Áù¡¿ÆÀÖÐ¹ú¹²²úµ³ÆÆ»µÃñ×åÎÄ»¯</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">¡¾Æß¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÉ±ÈËÀúÊ·</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">¡¾°Ë¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÐ°½Ì±¾ÖÊ</a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">¡¾¾Å¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÁ÷Ã¥±¾ÐÔ</a></td><td VALIGN=TOP width="352"><h2><p><strong>ÈýÍË´ó³±</strong></p></h2><strong>ÍË³öÖÐ¹²µ³¡¢ÍÅ¡¢¶Ó×ÜÈËÊý:
 
 ```diff
